# hisinnie

hisidv30_nnie/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config.ini  detect.lst  imgs_to_video.py  lane.lst  main  main.cpp  out.txt  scp_to_3516.sh  video.lst
hisidv30_nnie/data/lane_result/: ._[A
hisidv30_nnie/inc/: NNIEVideoCaputre.h  Net.hpp  detector.h  faceAlign.h  faceDetect.h  faceRecognition.h  lane.h  mpp_video.h  nnie_core.h  sample_comm.h  sample_comm_nnie.h  svp_convert.hpp  util.h  video_source.hpp
hisidv30_nnie/models/faceDetector/: slim-320_inst.wk
hisidv30_nnie/see/: Untitled Project.IAD  Untitled Project.IMB  Untitled Project.IMD  Untitled Project.PFI  Untitled Project.PO  Untitled Project.PR  Untitled Project.PRI  Untitled Project.SearchResults  Untitled Project.WK3
hisidv30_nnie/src/: NNIEVideoCapture.cpp  detector.cpp  faceAlign.cpp  faceDetect.cpp  faceRecognition.cpp  lane.cpp  mpp_video.c  nnie_core.c  sample_comm_isp.c  sample_comm_ive.c  sample_comm_nnie.c  sample_comm_sys.c  sample_comm_vdec.c  sample_comm_vi.c  sample_comm_vo.c  svp_convert.cpp  utils.cpp  video_source.cpp
